--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,10 +3,14 @@
   "version": "1.0.0",
   "name": "Batcast",
   "action": {
-    "default_popup": "index.html"
-  },
-  "side_panel": {
-    "default_path": "index.html"
+    "default_title": "Batcast",
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "icons/icon-16.png",
+      "32": "icons/icon-32.png",
+      "48": "icons/icon-48.png",
+      "128": "icons/icon-128.png"
+    }
   },
   "background": {
     "service_worker": "background.js"
@@ -17,7 +21,11 @@
       "js": ["content.js"]
     }
   ],
-  "permissions": ["scripting", "tabs", "sidePanel", "commands", "contextMenus"],
+  "options_ui": {
+    "page": "options.html",
+    "open_in_tab": true
+  },
+  "permissions": ["storage", "scripting", "tabs", "identity", "commands", "contextMenus"],
   "host_permissions": ["http://*/*", "https://*/*"],
   "commands": {
     "_execute_action": {
@@ -27,13 +35,6 @@
       },
       "description": "Opens Popup",
       "global": true
-    },
-    "open_side_panel": {
-      "suggested_key": {
-        "default": "Ctrl+Shift+O",
-        "mac": "Command+Shift+O"
-      },
-      "description": "Open the side panel"
     }
   }
 }
