--- a/package.json
+++ b/package.json
@@ -1,18 +1,24 @@
 {
   "name": "batcast",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "build": "tsc && vite build",
-    "build-watch": "vite build --watch"
+    "build": "rollup -c rollup.config.mjs",
+    "watch": "rollup -c rollup.config.mjs -w"
   },
   "devDependencies": {
+    "@rollup-extras/plugin-copy": "^1.11.0",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^16.0.1",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^12.1.2",
     "@types/chrome": "^0.0.326",
-    "typescript": "~5.8.3",
-    "vite": "^6.3.5"
+    "@types/papaparse": "^5.3.16",
+    "rollup": "^4.43.0",
+    "tslib": "^2.8.1",
+    "typescript": "~5.8.3"
   },
   "dependencies": {
-    "@types/papaparse": "^5.3.16",
     "convert-csv-to-json": "^3.4.0",
     "nanoid": "^5.1.5",
     "papaparse": "^5.5.3"
