--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "type": "module",
   "scripts": {
     "build": "rollup -c rollup.config.mjs",
-    "csvj": "node ./scripts/csvj.js",
-    "csvj:batters": "node ./scripts/csvj.js --inputFile='batters.csv'",
-    "csvj:pitchers": "node ./scripts/csvj.js --inputFile='pitchers.csv'",
-    "csvj:limits": "node ./scripts/csvj.js --inputFile='limits.csv'",
-    "csvj:parks-left": "node ./scripts/csvj.js --inputFile='pfL.csv'",
-    "csvj:parks-right": "node ./scripts/csvj.js --inputFile='pfR.csv'",
-    "csvj:parks": "npm run csvj:parks-left & npm run csvj:parks-right",
-    "csvj:players": "npm run csvj:batters & npm run csvj:pitchers",
-    "csvj:test": "node ./scripts/csvj.js --test",
+    "csv": "node ./scripts/csvj.js",
+    "csv:batters": "node ./scripts/csvj.js --inputFile='batters.csv'",
+    "csv:pitchers": "node ./scripts/csvj.js --inputFile='pitchers.csv'",
+    "csv:limits": "node ./scripts/csvj.js --inputFile='limits.csv'",
+    "csv:parks-left": "node ./scripts/csvj.js --inputFile='pfL.csv'",
+    "csv:parks-right": "node ./scripts/csvj.js --inputFile='pfR.csv'",
+    "csv:parks": "npm run csvj:parks-left & npm run csvj:parks-right",
+    "csv:players": "npm run csvj:batters & npm run csvj:pitchers",
+    "csv:test": "node ./scripts/csvj.js --test",
+    "test": "vitest",
     "watch": "rollup -c rollup.config.mjs -w"
   },
   "devDependencies": {
@@ -22,10 +23,12 @@
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.2",
     "@types/chrome": "^0.0.326",
+    "@types/jest": "^30.0.0",
     "@types/papaparse": "^5.3.16",
     "rollup": "^4.43.0",
     "tslib": "^2.8.1",
-    "typescript": "~5.8.3"
+    "typescript": "~5.8.3",
+    "vitest": "^3.2.4"
   },
   "dependencies": {
     "convert-csv-to-json": "^3.4.0",
