June 18 2025 Projections Update

--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "type": "module",
   "scripts": {
     "build": "rollup -c rollup.config.mjs",
-    "csv": "node ./scripts/csvj.js",
-    "csv:batters": "node ./scripts/csvj.js --inputFile='batters.csv'",
-    "csv:pitchers": "node ./scripts/csvj.js --inputFile='pitchers.csv'",
-    "csv:limits": "node ./scripts/csvj.js --inputFile='limits.csv'",
-    "csv:parks-left": "node ./scripts/csvj.js --inputFile='pfL.csv'",
-    "csv:parks-right": "node ./scripts/csvj.js --inputFile='pfR.csv'",
-    "csv:parks": "npm run csvj:parks-left & npm run csvj:parks-right",
-    "csv:players": "npm run csvj:batters & npm run csvj:pitchers",
-    "csv:test": "node ./scripts/csvj.js --test",
+    "csvj": "node ./scripts/csvj.js",
+    "csvj:batters": "node ./scripts/csvj.js --inputFile='batters.csv'",
+    "csvj:pitchers": "node ./scripts/csvj.js --inputFile='pitchers.csv'",
+    "csvj:limits": "node ./scripts/csvj.js --inputFile='limits.csv'",
+    "csvj:parks-left": "node ./scripts/csvj.js --inputFile='pfL.csv'",
+    "csvj:parks-right": "node ./scripts/csvj.js --inputFile='pfR.csv'",
+    "csvj:parks": "npm run csvj:parks-left & npm run csvj:parks-right",
+    "csvj:players": "npm run csvj:batters & npm run csvj:pitchers",
+    "csvj:test": "node ./scripts/csvj.js --test",
     "test": "vitest",
     "watch": "rollup -c rollup.config.mjs -w"
   },
